# qbm-ai-system

./: .env.example  .gitignore  ALGORITHM_CONVERSION_DESIGN.md  API_REFERENCE.md  ARCHITECTURE_UNIFICATION_COMPLETE.md  BMOS_ACCESS_NOW.bat  BMOS_BROWSER_ACCESS.bat  BMOS_SYSTEM_COMPLETE.md  BMOS_SYSTEM_STATUS.md  BMOS_SYSTEM_TEST_RESULTS.md  BMOS_WINDOWS_SOLUTION.md  BUSINESS_DATA_PIPELINE.md  BUSINESS_DATA_PIPELINE_DIAGRAM.md  BUSINESS_DATA_PIPELINE_IMPLEMENTATION_GUIDE.md  BUSINESS_DATA_PIPELINE_SUMMARY.md  BUSINESS_MODEL_INTEGRATION_FRAMEWORK.md  COLLABORATIVE_DEVELOPMENT_FRAMEWORK.md  CORE_RESOURCES_CAPABILITIES_DESIGN.md  DATA_CHAIN_AND_CALCULATION_LOGIC.md  DATA_CHAIN_ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDELINES.md  DOCKER_ISSUE_RESOLUTION.md  DOCUMENT_CLEANUP_SUMMARY.md  DOCUMENT_CONSISTENCY_ANALYSIS.md  EDGE_FUNCTIONS_TEST_CASES.md  ENVIRONMENT_SETUP.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  FINAL_PROJECT_STATUS_REPORT.md  HIERARCHICAL_DECISION_EXAMPLE.md  HIERARCHICAL_DECISION_FRAMEWORK.md  IMPLEMENTATION_GUIDE.md  INTEGRATED_SYSTEM_IMPLEMENTATION.md  LICENSE  LOVABLE_BACKEND_ALTERNATIVES.md  LOVABLE_COMPATIBILITY_GUIDE.md  LOVABLE_IMPLEMENTATION_READY.md  PERFORMANCE_TEST_SUMMARY.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_COMPLETION_SUMMARY.md  (+61 more)
backend/: Dockerfile  Dockerfile.dev  check_service.ps1  core_performance_results.json  main.py  main_optimized.py  performance_test_comprehensive.py  pyproject.toml  pytest.ini  requirements-simple.txt  requirements.txt  simple_test.py  simple_test_fixed.py  start_server.bat  start_server.sh  start_service.py  start_simple.py  test_api_endpoints.py  test_api_simple.py  test_clickhouse.py  test_core_performance.py  test_core_performance_fixed.py  test_enhanced_data_import.py  test_enhanced_enterprise_memory.py  test_enhanced_model_training.py  test_simple_api.py
backend/app/: clickhouse.py  config.py  database.py  main.py
backend/scripts/: test_document_upload.py  test_expert_knowledge_api.py  test_expert_knowledge_dependencies.py  test_expert_knowledge_features.py  test_ocr_detailed.py  upload_document_example.py
backend/src/: api.py  auth.py  config.py  constants.py  database.py  exceptions.py  logging_config.py  main.py
backend/tests/: __init__.py  test_ai_minimal_e2e.py  test_ai_planning_loop.py  test_ai_strategic_layer.py  test_algorithms_comprehensive.py  test_api.py  test_api_comprehensive.py  test_api_endpoints.py  test_attribution.py  test_auth.py  test_basic.py  test_comprehensive.py  test_customers.py  (+8 more)
(+664 files in other folders)
